--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ h4 {
 }
 h5 {
 	font-size:0.83em;
-	margin:1.67em 0;
+	margin:0.3em 0;
 }
 h6 {
 	font-size: 12px;
@@ -671,6 +671,36 @@ h1.arrow span {
 	-webkit-transition: all .3s ease-out;
 	transition:all .3s ease-out;
 	color:#fff;
+}
+
+/* FOOTER FOR PORTFOLIO IMAGES */
+.col-sm-6 {
+  background-color: #363636;
+  color: #fff;
+}
+
+.col-sm-6 a {
+  color: #fff;
+}
+
+.col-sm-4 a {
+  color: #fff;
+}
+
+.col-sm-6 .icon {
+	position:relative;
+	/* width:175px; */
+	/* height:175px; */
+	/* margin:0 auto; */
+  margin-bottom: -8px;
+	/* text-align:center; */
+	/* line-height:180px; */
+	font-size:25px;
+	color:#fff;
+}
+
+.links-images {
+  shape-inside: rectangle();
 }
 
 .features-wrapper {
