--- a/css/style.css
+++ b/css/style.css
@@ -677,6 +677,7 @@ h1.arrow span {
 .col-sm-6 {
   background-color: #363636;
   color: #fff;
+  height: 400px;
 }
 
 .col-sm-6 a {
@@ -771,10 +772,13 @@ i.respons {
 	color:#fff;
 	background:rgba(0,0,0,1);
 }
-.portfolio img {
-	height:300px;
-	width:100%;
+.aniview img {
+  /* height: 400px; */
+  /* width: 100%; */
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
+
 img.grayscale {
 	filter:url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
 	/* Firefox 3.5+,IE10 */ filter:gray;
