Modified the following:
image change, took out section from porfolio
  #	modified:   css/style.css
  #	new file:   img/primarycolor1.png
  #	modified:   index.html
  #	modified:   js/classie.js

--- a/css/style.css
+++ b/css/style.css
@@ -453,7 +453,8 @@ table {
 }
 /* ==========================================================================Hero========================================================================== */
 .hero {
-	background: url('../img/header-bwsl.png') right bottom no-repeat;
+  /* right bottom no-repeat; */
+	background: url('../img/primarycolor1.png') right no-repeat;
 	background-size: contain;
 	padding: 110px 0 100px 0;
 	height:auto;
