Updatign hero image on portfolio

--- a/css/style.css
+++ b/css/style.css
@@ -454,7 +454,7 @@ table {
 /* ==========================================================================Hero========================================================================== */
 .hero {
   /* right bottom no-repeat; */
-	background: url('../img/primarycolor1.png') right no-repeat;
+	/* background: url('../img/primarycolor1.png') right no-repeat; */
 	background-size: contain;
 	padding: 110px 0 100px 0;
 	height:auto;
